--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "rxfire": "^6.0.0"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~12.2.13",
+    "@angular-devkit/architect": "~0.1202.13",
+    "@angular-devkit/build-angular": "^13.0.1",
     "@angular/cli": "~12.2.13",
     "@angular/compiler-cli": "~12.2.13",
     "@angular/language-service": "~12.2.13",
@@ -38,9 +39,13 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "codelyzer": "^6.0.0",
+    "firebase-tools": "^9.22.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^8.2.0",
+    "inquirer-autocomplete-prompt": "^1.0.1",
     "jasmine-core": "~3.6.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "jest": "^26.0.1",
+    "jest": "^27.3.1",
     "karma": "~6.3.8",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~2.1.0",
@@ -49,11 +54,6 @@
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.3.5",
-    "@angular-devkit/architect": "~0.1202.13",
-    "firebase-tools": "^9.22.0",
-    "fuzzy": "^0.1.3",
-    "inquirer": "^6.2.2",
-    "inquirer-autocomplete-prompt": "^1.0.1"
+    "typescript": "~4.3.5"
   }
 }
